kubernetes/nginx-mail-domain-tld/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-mail-domain-tld
  namespace: mailserver
  labels:
    app: nginx-mail-domain-tld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-mail-domain-tld
  template:
    metadata:
      labels:
        app: nginx-mail-domain-tld
    spec:
      imagePullSecrets:
      - name: registry-domain-tld
      restartPolicy: Always
      containers:
      - name: nginx-mail-domain-tld
        image: registry.domain.tld:5000/mail-domain-tld:0.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 2
          initialDelaySeconds: 10
          periodSeconds: 20
          successThreshold: 1
          tcpSocket:
            port: 80
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 2
          periodSeconds: 20
          successThreshold: 1
          tcpSocket:
            port: 80
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 10m
            memory: 10Mi
          requests:
            cpu: 10m
            memory: 10Mi
        ports:
        - containerPort: 80
