kubernetes/nginx-mail-domain-tld/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mail-domain-tld
  namespace: mailserver
  annotations:
    kubernetes.io/ingress.class: "traefik"
  labels:
    app: nginx-mail-domain-tld
spec:
  rules:
  - host: mail.domain-tld
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-mail-domain-tld
          servicePort: 80
